# synth-galaxy

./: .gitignore  LICENSE  PRESET_LOADER_NOTES.md  README.md  ROADMAP.md  pyproject.toml
presets/: .gitkeep
scripts/: build_atlas.py  clap_encode.py  decode_demo.py  embed_and_plot.py  encode_and_replot.py  extract_features.py  extract_wavetable_fingerprints.py  galaxy_interactive.py  galaxy_interactive_v2.py  inspect_preset_json.py  inspect_vital_params.py  precompute_details.py  probe_state_format.py  process_wt_corpus.py  recover_preset_metadata.py  render_dataset.py  render_mutations.py  render_presets.py  search_server.py  smoke_test_render.py  test_full_preset_load.py  test_preset_load.py  test_preset_render.py  train_vae.py  umap_clap_basis.py  umap_mod_basis.py  umap_wt_atlas.py  umap_wt_basis.py
src/synth_galaxy/: __init__.py  clap_descriptors.py  config.py  dataset.py  embed.py  features.py  mutation_sampler.py  preset_loader.py  preset_loader_full.py  render.py  sampler.py  vae.py
